Adjust redirect handling